# ASTERIX-dev

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  plan.m
.cargo/: config.toml
.github/: copilot-instructions.md
crates/asterix-browser/: Cargo.toml
crates/asterix-browser/src/: lib.rs
crates/asterix-core/: Cargo.toml
crates/asterix-core/src/: lib.rs
crates/asterix-ui/: Cargo.toml
crates/asterix-ui/src/: lib.rs  main.rs
docker/: entrypoint.sh
