[package]
name = "asterix-ui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Desktop UI shell for the ASTERIX browser"

[[bin]]
name = "asterix"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
asterix-browser = { path = "../asterix-browser" }
eframe = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
smithay-clipboard = "=0.7.2"
home = "=0.5.11"
